--- a/src/tools/rest-frontend/public/pages/main/conversion.html
+++ b/src/tools/rest-frontend/public/pages/main/conversion.html
@@ -18,7 +18,7 @@
 							<select id="input_format" name="input_format" class="form-control"
 									ng-model="parameters.input.format"
 									required
-									ng-options="row.format + ' (' + row.plugin + ')' for row in formats"></select>
+									ng-options="'APP.CONVERSION.FORM.OPTIONS.FORMATS' | translate:row for row in formats"></select>
 							<div ng-show="convertForm.input_format.$invalid && convertForm.input_format.$dirty">
 								<span class="help-block mt5 ml10" ng-messages="convertForm.input_format.$error">
 									<i class="fa fa-times"></i>
@@ -53,7 +53,7 @@
 							<select id="output_format" name="output_format" class="form-control"
 									ng-model="parameters.output.format"
 									required
-									ng-options="row.format + ' (' + row.plugin + ')' for row in formats">
+									ng-options="'APP.CONVERSION.FORM.OPTIONS.FORMATS' | translate:row for row in formats">
 							</select>
 							<div ng-show="convertForm.output_format.$invalid && convertForm.output_format.$dirty">
 								<span class="help-block mt5 ml10" ng-messages="convertForm.output_format.$error">
