rest-frontend: fix markdown parsing for code, icon for external links, README for parsereadme type

--- a/src/tools/rest-frontend/public/index.html
+++ b/src/tools/rest-frontend/public/index.html
@@ -35,6 +35,10 @@
         <link rel="stylesheet" type="text/css"
                 href="vendor/bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
 
+		<!-- HighlightJS -->
+		<link rel="stylesheet" type="text/css"
+			    href="vendor/bower_components/highlightjs/styles/github.css">
+
         <!-- Theme CSS -->
         <link rel="stylesheet" type="text/css"
                 href="assets/skin/default/css/theme.min.css">
@@ -72,8 +76,9 @@
         <script src="vendor/bower_components/blob-polyfill/Blob.js"></script>
         <script src="vendor/bower_components/file-saver.js/FileSaver.js"></script>
 
-		<!-- Marked for Markdown -->
+		<!-- Marked for Markdown & HighlightJS for syntax -->
 		<script src="vendor/bower_components/marked/marked.min.js"></script>
+		<script src="vendor/bower_components/highlightjs/highlight.pack.min.js"></script>
 
         <!-- AngularJS -->
         <script src="vendor/bower_components/angular/angular.min.js"></script>
