--- a/src/tools/rest-frontend/public/pages/main/website/listfiles.html
+++ b/src/tools/rest-frontend/public/pages/main/website/listfiles.html
@@ -1,18 +1,19 @@
 <div class="row">
-	<div class="col-md-2">
+	<div class="col-md-3">
 		<div class="panel panel-default">
 			<div class="panel-body">
 				<ul class="nav nav-pills nav-stacked">
 					<li ng-repeat="file in files"
 						ng-class="{active: file.name === currentFile.name, 'section-title': file.type === 'section'}">
-						<a ng-if="file.type === 'file'" ng-click="ctrl.setCurrentFile(file)">{{ file.name }}</a>
+						<a ng-if="file.type === 'file'" class="listfiles file-link"
+						   ng-click="ctrl.setCurrentFile(file)">{{ file.name }}</a>
 						<span ng-if="file.type === 'section'">{{ file.name }}</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</div>
-	<div class="col-md-10">
+	<div class="col-md-9">
 		<div class="panel panel-default">
 			<div class="panel-body" marked="currentFile.content">
 
