rest-frontend: rank description at user details, edit snippet format-preselection fix

--- a/src/tools/rest-frontend/public/pages/main/users/details.html
+++ b/src/tools/rest-frontend/public/pages/main/users/details.html
@@ -24,7 +24,7 @@
 						<label for="rank" class="control-label col-md-4">
 							{{ 'APP.USERS.DETAILS.LABEL.RANK' | translate }}
 						</label>
-						<p id="rank" class="form-control-static col-md-8">{{ user.rank }}</p>
+						<p id="rank" class="form-control-static col-md-8">{{ 'APP.USERS.DETAILS.LABEL.RANK.' + user.rank | translate }}</p>
 					</div>
 					<div class="form-group">
 						<label for="created_at" class="control-label col-md-4">
