rest-frontend: scroll-to-top button

--- a/src/tools/rest-frontend/public/pages/main/template.html
+++ b/src/tools/rest-frontend/public/pages/main/template.html
@@ -96,6 +96,10 @@
         <div ncy-breadcrumb></div>
         <p class="text-right copyright">
             <span date-now="yyyy"></span> &copy; <a href="http://libelektra.org">ElektraInitiative</a>
+			<a class="scroll-to-top text-info" ng-click="ctrl.scrollToTop()"
+			   title="{{ 'APP.GLOBAL.FOOTER.LINK.TITLE.SCROLLTOTOP' | translate }}">
+				<i class="fa fa-arrow-up"></i>
+			</a>
         </p>
     </div>
 </footer>
