--- a/src/tools/rest-frontend/public/pages/main/website/listfiles.html
+++ b/src/tools/rest-frontend/public/pages/main/website/listfiles.html
@@ -17,8 +17,9 @@
 	</div>
 	<div class="col-md-9">
 		<div class="panel panel-default">
-			<div class="panel-body" marked="currentFile.content">
-
+			<div class="panel-body">
+				<div class="docu markdown" marked="currentFile.content">
+				</div>
 			</div>
 		</div>
 	</div>
