rest-frontend: make documentation links work

--- a/src/tools/rest-frontend/public/pages/main/website/listfiles.html
+++ b/src/tools/rest-frontend/public/pages/main/website/listfiles.html
@@ -18,7 +18,7 @@
 	<div class="col-md-9">
 		<div class="panel panel-default">
 			<div class="panel-body">
-				<div class="docu markdown" marked="currentFile.content">
+				<div class="docu markdown" id="markdown-document">
 				</div>
 			</div>
 		</div>
