rest-frontend: small markup fixes

--- a/src/tools/rest-frontend/public/pages/main/website/listfiles.html
+++ b/src/tools/rest-frontend/public/pages/main/website/listfiles.html
@@ -9,7 +9,7 @@
 						   ui-sref="{{ $state.current.name + '({file:\'' + file.slug + '\'})' }}">
 							{{ file.name }}
 						</a>
-						<span ng-if="file.type === 'section'">{{ file.name }}</a>
+						<span ng-if="file.type === 'section'">{{ file.name }}</span>
 					</li>
 				</ul>
 			</div>
