rest-frontend: fix entry form icon misplacement

--- a/src/tools/rest-frontend/public/pages/main/entries/form.html
+++ b/src/tools/rest-frontend/public/pages/main/entries/form.html
@@ -73,7 +73,7 @@
 								   title="{{ 'APP.ENTRIES.FORM.ALTTEXT.ORGANIZATION.HINT' | translate }}"></i>
 							</span>
 						</div>
-						<span class="fa form-control-feedback"
+						<span class="fa form-control-feedback" style="right:48px;"
 							  ng-class="{'fa-times': entryForm.organization.$invalid && entryForm.organization.$dirty,
 										 'fa-check': !entryForm.organization.$invalid && entryForm.organization.$dirty}"></span>
 						<div ng-show="entryForm.organization.$invalid && entryForm.organization.$dirty">
@@ -105,7 +105,7 @@
 								   title="{{ 'APP.ENTRIES.FORM.ALTTEXT.APPLICATION.HINT' | translate }}"></i>
 							</span>
 						</div>
-						<span class="fa form-control-feedback"
+						<span class="fa form-control-feedback" style="right:48px;"
 							  ng-class="{'fa-times': entryForm.application.$invalid && entryForm.application.$dirty,
 										 'fa-check': !entryForm.application.$invalid && entryForm.application.$dirty}"></span>
 						<div ng-show="entryForm.application.$invalid && entryForm.application.$dirty">
@@ -136,7 +136,7 @@
 								   title="{{ 'APP.ENTRIES.FORM.ALTTEXT.SCOPE.HINT' | translate }}"></i>
 							</span>
 						</div>
-						<span class="fa form-control-feedback"
+						<span class="fa form-control-feedback" style="right:48px;"
 							  ng-class="{'fa-times': entryForm.scope.$invalid && entryForm.scope.$dirty,
 										 'fa-check': !entryForm.scope.$invalid && entryForm.scope.$dirty}"></span>
 						<div ng-show="entryForm.scope.$invalid && entryForm.scope.$dirty">
@@ -171,7 +171,7 @@
 								   title="{{ 'APP.ENTRIES.FORM.ALTTEXT.SLUG.HINT' | translate }}"></i>
 							</span>
 						</div>
-						<span class="fa form-control-feedback"
+						<span class="fa form-control-feedback" style="right:48px;"
 							  ng-class="{'fa-times': entryForm.slug.$invalid && entryForm.slug.$dirty,
 										 'fa-check': !entryForm.slug.$invalid && entryForm.slug.$dirty}"></span>
 						<div ng-show="entryForm.slug.$invalid && entryForm.slug.$dirty">
